--- a/bbknikola.ipynb
+++ b/bbknikola.ipynb
@@ -30,9 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -40,12 +40,12 @@
     "import getpass\n",
     "from walkdir import filtered_walk, dir_paths, all_paths, file_paths\n",
     "import arrow\n",
-    "import nikola\n"
+    "#import nikola\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -56,39 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2015-02-19T04:19:28.459217+00:00\n"
-     ]
-    }
-   ],
-   "source": [
-    "print raw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "\n",
     "def returntime():\n",
     "    return raw.strftime('%H:%M:%S')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -96,10 +76,10 @@
     {
      "data": {
       "text/plain": [
-       "'04:19:28'"
+       "'05:15:36'"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -124,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -135,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -168,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -190,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -203,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -219,14 +199,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name of file to blog: test\n"
+     ]
+    }
+   ],
    "source": [
-    "nbog = raw_input('Name of notebook to blog: ')"
+    "nbog = input('Name of file to blog: ')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extension of file to blog: .rst\n"
+     ]
+    }
+   ],
+   "source": [
+    "etnam = input('Extension of file to blog: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "post tags: wow, test\n"
+     ]
+    }
+   ],
+   "source": [
+    "tagmak = input('post tags: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "path to search: /home/wcmckee/\n"
+     ]
+    }
+   ],
+   "source": [
+    "pear = input('path to search: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -241,30 +295,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "files = file_paths(filtered_walk('/home/wcmckee/github/', depth=100, included_files=[nbog + '.ipynb']))"
+    "files = file_paths(filtered_walk(pear, depth=100, included_files=[nbog + etnam]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<generator object file_paths at 0xb22d03c8>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#print files"
    ]
@@ -288,30 +334,47 @@
    },
    "outputs": [],
    "source": [
-    "podir = ('/home/wcmckee/github/wcmckee.com/posts/')"
+    "#podir = ('/home/wcmckee/github/wcmckee.com/posts/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'/home/wcmckee/github/wcmckee.com/posts/'"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "blog dir: /home/wcmckee/bb\n"
+     ]
     }
    ],
    "source": [
-    "podir"
+    "podir = input('blog dir: ')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "postsdir = podir + ('/posts/' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -345,7 +408,7 @@
    "outputs": [],
    "source": [
     "opeza = open(podir + nbog + '.meta', 'w')\n",
-    "opeza.write(nbog + '\\n' + nbog + '\\n' + fultim)\n",
+    "opeza.write(nbog + '\\n' + nbog + '\\n' + fultim + '\\n' + tagmak)\n",
     "opeza.close()"
    ]
   },
@@ -366,27 +429,28 @@
    },
    "outputs": [],
    "source": [
-    "os.chdir('/home/wcmckee/github/wcmckee.com/')\n",
+    "os.chdir(podir)\n",
     "os.system('nikola build')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
-   "name": "python2"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.8"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.0"
   }
  },
  "nbformat": 4,
